force-app/main/default/objects/SFS_ResourceCertification__c/SFS_ResourceCertification__c.object-meta.xml
<CustomObject>
    <description>Custom junction object between Certifications and Service Resource to store the certifications for the field service resources</description>
    <label>Resource Certification</label>
    <nameField>
        <displayFormat>SRCERT-{000000}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Certifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>