force-app/main/default/objects/SFS_ResourceCertification__c/fields/SFS_Certification__c.field-meta.xml
<CustomField>
    <fullName>SFS_Certification__c</fullName>
    <description>This field stores the certification of resource</description>
    <label>Certification</label>
    <referenceTo>SFS_Certification__c</referenceTo>
    <relationshipLabel>Resource Certifications</relationshipLabel>
    <relationshipName>Resource_Certifications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>