force-app/main/default/objects/SFS_ResourceCertification__c/fields/SFS_EffectiveEndDate__c.field-meta.xml
<CustomField>
    <fullName>SFS_EffectiveEndDate__c</fullName>
    <description>This field stores the End Date of Certification</description>
    <encryptionScheme>None</encryptionScheme>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>