force-app/main/default/objects/SFS_ResourceCertification__c/fields/SFS_EffectiveStartDate__c.field-meta.xml
<CustomField>
    <fullName>SFS_EffectiveStartDate__c</fullName>
    <description>This field stores the Start Date of the Certification</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>