force-app/main/default/objects/SFS_ResourceCertification__c/fields/SFS_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>SFS_ExternalId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This field stores the external id</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>