force-app/main/default/objects/SFS_ResourceCertification__c/fields/SFS_ServiceResource__c.field-meta.xml
<CustomField>
    <fullName>SFS_ServiceResource__c</fullName>
    <description>This field stores the Service Resource that has earned the certification</description>
    <label>Service Resource</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Resource Certifications</relationshipLabel>
    <relationshipName>Resource_Certifications</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>