force-app/main/default/objects/SFS_ResourceCertification__c/validationRules/End_Date_cannot_precede_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_cannot_precede_Start_Date</fullName>
    <active>true</active>
    <description>Validation rule to not allow the End Date to be before or equal to Start Date</description>
    <errorConditionFormula>If( SFS_EffectiveEndDate__c &lt;=  SFS_EffectiveStartDate__c, true, false)</errorConditionFormula>
    <errorMessage>End Date cannot be before or equal to the Start Date</errorMessage>
</ValidationRule>